--- a/package.json
+++ b/package.json
@@ -4,9 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "tsc-watch --onSuccess \"node dist/src/main.js\""
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Leo Cheung",
+  "email": "leozhang621@gmail.com",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.1"
+  },
+  "packageManager": "pnpm@7.1.5",
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.4",
+    "tsc-watch": "^5.0.3",
+    "typescript": "^4.7.4"
+  }
 }
