--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
-    "start:dev": "tsc-watch --onSuccess \"node dist/src/main.js\""
+    "start:dev": "tsc-watch --onSuccess \"node dist/main.js\""
   },
   "keywords": [],
   "author": "Leo Cheung",
