--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 APP_PORT=3000
+
+MYSQL_HOST=192.168.31.236
+MYSQL_PORT=3306
+MYSQL_USER=root
+MYSQL_PASSWORD=test123456test
+MYSQL_DATABASE=photo_app
