--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "email": "leozhang621@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.18.1",
     "lodash": "^4.17.21",
     "mysql2": "^2.3.3"
   },
   "packageManager": "pnpm@7.1.5",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.182",
     "@types/node": "^18.0.4",
