--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
-    "start:dev": "tsc-watch --onSuccess \"node dist/main.js\""
+    "dev": "tsc-watch --onSuccess \"node dist/main.js\""
   },
   "keywords": [],
   "author": "Leo Cheung",
@@ -15,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mysql2": "^2.3.3"
   },
@@ -22,10 +22,12 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.182",
     "@types/node": "^18.0.4",
     "dotenv": "^16.0.1",
     "tsc-watch": "^5.0.3",
     "typescript": "^4.7.4"
-  }
+  },
+  "files": ["types/express.d.ts"]
 }
